@startuml

skinparam classAttributeIconSize 0

abstract class Person {
    # firstName : string
    # lastName : string
    + Person()
    + Person(firstName: string, lastName: string)
    + {abstract} ~Person()
    + getFirstName() : string
    + getLastName() : string
    + getFullName() : string
    + setFirstName(firstName: string) : void
    + setLastName(lastName: string) : void
    + {abstract} displayInfo() : void
}

class Employee {
    # employeeId : int
    # departmentId : int
    # salary : double
    + Employee()
    + Employee(employeeId: int, firstName: string, lastName: string, departmentId: int, salary: double)
    + {virtual} ~Employee()
    + getEmployeeId() : int
    + getDepartmentId() : int
    + getSalary() : double
    + setEmployeeId(employeeId: int) : void
    + setDepartmentId(departmentId: int) : void
    + setSalary(salary: double) : void
    + {virtual} displayInfo() : void
    + {virtual} calculateTotalIncome() : double
}

class Manager {
    - subordinates : vector<int>
    + Manager()
    + Manager(employeeId: int, firstName: string, lastName: string, departmentId: int, salary: double, subordinates: vector<int>)
    + ~Manager()
    + addSubordinate(subordinateId: int) : void
    + removeSubordinate(subordinateId: int) : void
    + getSubordinates() : vector<int>
    + getSubordinatesCount() : int
    + hasSubordinate(subordinateId: int) : bool
    + {override} displayInfo() : void
    + {override} calculateTotalIncome() : double
}

class Worker {
    - positionId : int
    - bonus : double
    + Worker()
    + Worker(employeeId: int, firstName: string, lastName: string, departmentId: int, salary: double, positionId: int, bonus: double = 0.0)
    + ~Worker()
    + getPositionId() : int
    + getBonus() : double
    + setPositionId(positionId: int) : void
    + setBonus(bonus: double) : void
    + {override} displayInfo() : void
    + {override} calculateTotalIncome() : double
}

class Department {
    - departmentId : int
    - departmentName : string
    - managerId : int
    - employees : vector<int>
    + Department()
    + Department(departmentId: int, departmentName: string, managerId: int)
    + ~Department()
    + getDepartmentId() : int
    + getDepartmentName() : string
    + getManagerId() : int
    + getEmployees() : vector<int>
    + getEmployeesCount() : int
    + setDepartmentId(departmentId: int) : void
    + setDepartmentName(departmentName: string) : void
    + setManagerId(managerId: int) : void
    + addEmployee(employeeId: int) : void
    + removeEmployee(employeeId: int) : void
    + hasEmployee(employeeId: int) : bool
    + displayInfo() : void
}

class Position {
    - positionId : int
    - positionName : string
    - workHoursPerWeek : int
    + Position()
    + Position(positionId: int, positionName: string, workHoursPerWeek: int)
    + ~Position()
    + getPositionId() : int
    + getPositionName() : string
    + getWorkHoursPerWeek() : int
    + setPositionId(positionId: int) : void
    + setPositionName(positionName: string) : void
    + setWorkHoursPerWeek(workHoursPerWeek: int) : void
    + displayInfo() : void
}

class HireDate {
    - employeeId : int
    - day : int
    - month : int
    - year : int
    - hour : int
    - minute : int
    + HireDate()
    + HireDate(employeeId: int, day: int, month: int, year: int, hour: int, minute: int)
    + ~HireDate()
    + getEmployeeId() : int
    + getDay() : int
    + getMonth() : int
    + getYear() : int
    + getHour() : int
    + getMinute() : int
    + setEmployeeId(employeeId: int) : void
    + setDay(day: int) : void
    + setMonth(month: int) : void
    + setYear(year: int) : void
    + setHour(hour: int) : void
    + setMinute(minute: int) : void
    + getDateString() : string
    + getTimeString() : string
    + getFullDateTimeString() : string
    + displayInfo() : void
}

Person <|-- Employee
Employee <|-- Manager
Employee <|-- Worker

Employee "1..*" --o "1" Department : works in
Department "1" -- "1" Manager : managed by
Manager "1" -- "*" Employee : manages
Worker "1" -- "0..1" Position : has
Employee "1" -- "1" HireDate : has

@enduml
